--- a/day7/style.css
+++ b/day7/style.css
@@ -1,1 +1,16 @@
 /*Día 7*/
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    box-sizing: border-box;
+}
+.principal{
+    
+}
