--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sarpanch:wght@400;500;600;700;800;900&display=swap');
 :root{
     --color-fondo:#2D9DA7;
-    --color-fuentes-bordes: #F5CA9E;
+    --color-fuentes-bordes: #013334 ;
+    --color-uno: #2D9DA7 ;
+    --color-dos: #F5CA9E;
+    --color-tres:  #FF1B1C;
     --fuentes-cuerpo: "Roboto Flex", sans-serif;
 }
 html{
@@ -18,7 +21,7 @@ body{
     /* display: flex;
     flex-direction: column; */
     height: 100vh;
-    background-color: var(--color-fondo);
+    /* background-color: var(--color-fondo); */
     color: var(--color-fuentes-bordes);
     font-family: var(--fuentes-cuerpo);
     font-style: normal;
@@ -26,6 +29,20 @@ body{
     font-size: 1.0rem;
     line-height: 1.2;
     box-sizing: border-box;
+    background: linear-gradient(-45deg, var(--color-tres), var(--color-uno), var(--color-dos), var(--color-uno), var(--color-tres));
+    background-size: 400% 400%;
+    animation: gradient 25s ease infinite;
+}
+@keyframes gradient{
+    0%{
+		background-position: 0% 50%;
+	}
+	50%{
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 main{
     display: flex;
@@ -69,7 +86,7 @@ main{
     margin-top: 5px;
     margin-bottom: 5px;
 }
-.dias{
+.dias, .redes__botones{
     margin: 2%;
     width: 80%;
     display: flex;
@@ -79,17 +96,22 @@ main{
     text-decoration: none;
     color: var(--color-fuentes-bordes);
     /* margin-right: 40px; */
-    border: solid  #F5CA9E 1.5px;
-    padding: 10px 15px;
+    border: solid  var(--color-fuentes-bordes) 1.5px;
+    padding: 1% 3%;
     border-radius: 15px;
 }
 .dias__enlace:hover, .redes__enlace:hover{
     transition: background-color 0.5s ease;
-    background-color: #F5CA9E;
-    color: var(--color-fondo);
-    padding: 10px 20px;
+    /* background: linear-gradient(90deg, var(--color-uno), var(--color-dos), var(--color-uno)); */
+    background-size: 120% 120%;
+    font-size: 1.1rem;
+    letter-spacing: 0.1rem;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: var(--color-fuentes-bordes);
+    padding: 1% 3.5%;
     border-radius: 15px;
-    transition: padding 0.3s ease;
+    transition: all 0.4s ease-in-out;
 }
 .redes__botones{
     margin-top: 3%;
