--- a/day2/style.css
+++ b/day2/style.css
@@ -62,9 +62,6 @@ body{
     }
     
 }
-.escondido{
-    display: none;
-}
 main{
     display: flex;
     flex-direction: column;
@@ -145,6 +142,16 @@ header{
         justify-content: space-between;
         gap: 5%
     }
+    .cuestionario{
+        width: 80%;
+    }
+    .cuestionario__pregunta, .cuestionario__cuadro{
+        width: 80%;
+    }
+    #cuestionario__nombre, #cuestionario__edad, #cuestionario__lenguaje{
+        width: 80%;
+        padding-left: 0;
+    }
 }
 .navegacion__enlaces_a, .navegacion__enlaces_a:visited{
     text-decoration: none;
@@ -161,7 +168,7 @@ header{
     width: 90%;
     text-align: justify;
 }
-.aplicacion ol li{
+.aplicacion ul li{
     list-style: none;
 }
 /* .botones__contenido{
@@ -176,21 +183,68 @@ header{
 .numbers__lista, .strings__lista{
     margin-bottom: 3%; */
 /* } */
+.cuestionario{
+    display: flex;
+    flex-direction: column;
+    border: var(--color-fuentes-bordes) solid 1px;
+    padding: 2%;
+    width: 50%;
+    border-radius: 2rem;
+    /* justify-content: center; */
+    align-items: center;
+    box-shadow: 0.5rem 0.5rem 0.8rem var(--color-fuentes-bordes);
+    gap: 0.5rem;
+}
+.cuestionario__cuadro{
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+.cuestionario__pregunta{
+    /* border: #013334 solid 1px;   */
+    width: 80%;
+    padding: 0 3%;
+    text-align: left;
+    font-size: 0.8rem;
+}
+#cuestionario__nombre, #cuestionario__edad, #cuestionario__lenguaje{
+    width: 95%;
+    padding-left: 1.0rem;
+    border-radius: 0.5rem;
+    border: none;
+    transition: all 0.8s ease;
+}
+#cuestionario__nombre:focus, #cuestionario__edad:focus, #cuestionario__lenguaje:focus{
+    outline: none;
+    border: var(--color-fuentes-bordes) 0.05rem solid;
+    box-shadow: 0.1rem 0.1rem 0.3rem var(--color-boton-deshabilitado);
+}
+#formularioOpcional{
+    flex-direction: column;
+    align-items: center; 
+}
+.escondido{
+    display: none;
+}
+.optional__content{
+    margin-bottom: 0.5rem;
+}
 button{
     height: 1.5rem;
     width: 5rem;
     background-color: var(--color-boton);
     border: none;
+    border-radius: 0.5rem;
     box-shadow: none;
     color: var(--color-boton-fuente);
-    transition: background-color 0.8s ease, rotate 0.6s ease-out;
+    transition: all 0.8s ease;
 }
 button:disabled{
     background-color: var(--color-boton-deshabilitado);
 }
 button:not(:disabled):hover{
-    scale: 1.1;
-    rotate: -2deg;
+    scale: 1.3;
     border: var(--color-boton) 0.1rem solid;
     background-color: transparent;
     color: var(--color-boton);
@@ -205,13 +259,21 @@ button:not(:disabled):hover{
     /* añadir a clase optional__mensaje */
 }
 @keyframes variables {
-    from{
+    0%{
         opacity: 0;
-        transform: translate3d(-30%,-50%,0);
+        transform: translate3d(0,-50%,0);
     }
-    to{
-        opacity: 1;
+    50%{
+        transform: translate3d(0,40%,0);
+        opacity: 0.3;
+    }
+    75%{
+        transform: translate3d(0,-20%,0);
+        opacity: 0.5;
+    }
+    100%{
         transform: translate3d(0,0,0);
+        opacity: 1;
     }
 }
 .repositorio_caja{
