Se añade diseño responsivo

--- a/day1/style.css
+++ b/day1/style.css
@@ -112,36 +112,7 @@ header{
     align-items: center;
     gap: 10%;
 }
-@media (max-width: 400px){
-    .navegacion__logo{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    .navegacion__logo__titulo{
-        margin-bottom: 2%;
-    }
-    .navegacion{
-        flex-direction: column;
-    }
-    .navegacion__enlaces{
-        justify-content: space-between;
-        padding: 0% 5%;
-        width: 90%;
-    }
-    .botones__contenido{
-        flex-direction: column;
-    }
-    .pie__redes{
-        flex-direction: column;
-        width: 100%;
-    }
-    .pies__redes_caja_enlaces{
-        width: 100%;
-        justify-content: space-between;
-        gap: 5%
-    }
-}
+
 .navegacion__enlaces_a, .navegacion__enlaces_a:visited{
     text-decoration: none;
     font-family: var(--fuente-enlaces);
@@ -288,4 +259,35 @@ footer{
     border: none;
     background-color: var(--color-fuentes-bordes);
     color: var(--color-boton-fuente);
+}
+@media (max-width: 400px){
+    .navegacion__logo{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .navegacion__logo__titulo{
+        margin-bottom: 2%;
+    }
+    .navegacion{
+        flex-direction: column;
+    }
+    .navegacion__enlaces{
+        justify-content: space-between;
+        padding: 0% 5%;
+        width: 90%;
+    }
+    .botones__contenido{
+        flex-direction: column;
+    }
+    .pie__redes{
+        flex-direction: column;
+        width: 100%;
+    }
+    .pies__redes_caja_enlaces{
+        width: 40%;
+        justify-content: center;
+        gap: 15%;
+        margin-bottom: 5%;
+    }
 }
