--- a/day4/day4.css
+++ b/day4/day4.css
@@ -1,5 +1,410 @@
 /* día 4 */
 
+/*Principal*/
+/* Fuente enlaces */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+/* Fuente de título */
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+/* Fuente cuerpo */
+@import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sarpanch:wght@400;500;600;700;800;900&display=swap');
+:root{
+    --color-fondo:#2D9DA7;
+    --color-fuentes-bordes: #013334 ;
+    --color-uno: #2D9DA7 ;
+    --color-dos: #F5CA9E;
+    --color-tres:  #EF2917;
+    --color-boton: #2A4494;
+    --color-boton-fuente: #ffffff;
+    --color-boton-deshabilitado: #122C34;
+    --color-animacion-1: #AEECEF;
+    --color-animacion-2: #80DED9;
+    --color-animacion-3: #068D9D;
+    --fuentes-cuerpo: "Roboto Flex", sans-serif;
+    --fuente-enlaces: "Bebas Neue", sans-serif;
+    --fuente-titulo: "Teko", sans-serif;
+    --animacion-fade-in: fadeIn 0.6s ease-out 2s;
+}
+html{
+    margin: 0;
+    padding: 0;
+}
+body{
+    /* display: flex;
+    height: 100vh;
+    /* background-color: var(--color-fondo); */
+    height: 100vh;
+    color: var(--color-fuentes-bordes);
+    font-family: var(--fuentes-cuerpo);
+    font-style: normal;
+    text-align: center;
+    font-size: 1.0rem;
+    line-height: 1.2;
+    box-sizing: border-box;
+    /* background-image: url(./img/dia1.jpg);
+    background-position: 0;
+    background-size:auto; */
+    animation-name: change-color;
+    animation-duration: 15s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@keyframes change-color {
+    0%, 100%{
+        background-color: var(--color-animacion-1);
+    }
+    25%, 75%{
+        background-color: var(--color-animacion-2);
+    }
+    50%{
+        background-color: var(--color-animacion-3);
+    }
+    
+}
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5%;
+    width: 90%;
+    /* background-color: aliceblue; */
+    /* animation-name: fadeIn;
+    animation-duration: 0.6s;
+    animation-timing-function: ease-out;
+    animation: FadeIn 0.6s ease-out 2s; */
+}
+.navegacion__enlaces, main, footer{
+    opacity: 0;
+    animation: var(--animacion-fade-in);
+    animation-fill-mode: forwards;
+}
+@keyframes fadeIn {
+    0%{
+        transform: translateY(3%);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+header{
+    width: 90%;
+}
+.navegacion{
+    width: 100%;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    margin: 2%;
+}
+
+.navegacion__logo__titulo{
+    margin: 1%;
+    width: 100%;
+    font-family: var(--fuente-titulo);
+    letter-spacing: 0.2rem;
+    font-size: 2rem;
+    font-weight: 500;
+    Text-shadow: 
+      0.1rem 0.1rem 0 #d5d5d5, 
+      0.3rem 0.3rem 0 rgba(0, 0, 0, 0.2);
+    animation: titulo 1.5s ease, popUp 0.5s ease 1.5s;
+}
+@keyframes titulo {
+    0%{
+        transform: translateX(250%);
+        opacity: 0;
+        scale:0.4;
+    }
+    10%{
+        scale: 1;
+        transform: translateX(250%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+@keyframes popUp {
+    0%{
+        scale: 1.2;
+    }
+    25%{
+        scale: 0.8;
+    }
+    50%{
+        scale: 1.1;
+    }
+    75%{
+        scale: 0.9;
+    }
+    100%{
+        scale: 1;
+    }
+}
+.navegacion__enlaces{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 10%;
+}
+
+.navegacion__enlaces_a, .navegacion__enlaces_a:visited{
+    text-decoration: none;
+    font-family: var(--fuente-enlaces);
+    font-size: 1.5rem;
+    color: var(--color-fuentes-bordes);
+}
+.navegacion__enlaces_a:hover{
+    letter-spacing: 0.1rem;
+    transition: letter-spacing 0.2s ease-in-out;
+    text-shadow: var(--color-tres) 0 0 0.5rem;
+}
+.aplicacion{
+    width: 90%;
+    text-align: justify;
+}
+.aplicacion ul li{
+    list-style: none;
+}
+/* .botones__contenido{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+}
+.strings, .numbers{
+    list-style: none;
+}
+.numbers__lista, .strings__lista{
+    margin-bottom: 3%; */
+/* } */
+.cuestionario{
+    display: flex;
+    flex-direction: column;
+    border: var(--color-fuentes-bordes) solid 1px;
+    padding: 2%;
+    width: 50%;
+    border-radius: 2rem;
+    align-items: center;
+    box-shadow: 0.5rem 0.5rem 0.8rem var(--color-fuentes-bordes);
+    gap: 0.5rem;
+}
+.cuestionario__cuadro{
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+.cuestionario__pregunta{
+
+    width: 80%;
+    padding: 0 3%;
+    text-align: left;
+    font-size: 0.8rem;
+}
+#cuestionario__nombre, #cuestionario__edad, #cuestionario__lenguaje{
+    width: 95%;
+    padding-left: 1.0rem;
+    border-radius: 0.5rem;
+    border: none;
+    transition: all 0.8s ease;
+}
+#cuestionario__nombre:focus, #cuestionario__edad:focus, #cuestionario__lenguaje:focus{
+    outline: none;
+    border: var(--color-fuentes-bordes) 0.05rem solid;
+    box-shadow: 0.1rem 0.1rem 0.3rem var(--color-boton-deshabilitado);
+}
+#formularioOpcional{
+    flex-direction: column;
+    align-items: center; 
+}
+.escondido{
+    display: none;
+}
+.optional__content{
+    margin-bottom: 0.5rem;
+}
+button{
+    height: 1.5rem;
+    /* width: 5rem; */
+    background-color: var(--color-boton);
+    border: none;
+    border-radius: 0.5rem;
+    box-shadow: none;
+    color: var(--color-boton-fuente);
+    transition: all 0.8s ease;
+}
+button:disabled{
+    background-color: var(--color-boton-deshabilitado);
+}
+button:not(:disabled):hover{
+    /* scale: 1.3; */
+    border: var(--color-boton) 0.1rem solid;
+    background-color: transparent;
+    color: var(--color-boton);
+    font-weight: 600;
+}
+.resultados__botones p{
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+.animacion__texto{
+    animation: variables 0.9s ease-in-out;
+    /* añadir a clase optional__mensaje */
+}
+@keyframes variables {
+    0%{
+        opacity: 0;
+        transform: translate3d(0,-50%,0);
+    }
+    50%{
+        transform: translate3d(0,40%,0);
+        opacity: 0.3;
+    }
+    75%{
+        transform: translate3d(0,-20%,0);
+        opacity: 0.5;
+    }
+    100%{
+        transform: translate3d(0,0,0);
+        opacity: 1;
+    }
+}
+.repositorio_caja{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#enlace_respositorio{
+    /* width: 800px; */
+    /* border: red solid 3px; */
+    position: relative;
+    line-height: 2rem  ;
+    text-align: center;
+    text-decoration: none;
+    color: var(--color-fuentes-bordes);
+    padding: 1%;
+    transition: all 0.8s ease-in;
+}
+#enlace_respositorio:hover{
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+#enlace_respositorio::before, #enlace_respositorio::after{
+    position:absolute;
+    content: "";
+    left: 0;
+    right: 0;
+    height: 0.2rem;
+    width: 0;
+    background: var(--color-fuentes-bordes);
+    transition: all 0.8s ease;
+}
+#enlace_respositorio::after{
+    right: inherit;
+    top: inherit;
+    left: 0;
+    bottom: 0;
+}
+#enlace_respositorio:hover::before,#enlace_respositorio:hover::after{
+    width: 100%;
+    /* transition: all 0.8s ease; */
+}
+#comparar__seccion_resultado{
+    font-size: 1.5rem;
+}
+footer{
+    width: 90%;
+    height: 5%;
+    margin-top: 3%;
+    box-sizing: border-box;
+    
+}
+.pie__redes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+}
+.pies__redes_caja_enlaces{
+    width: 10%;
+    display: flex;
+    gap: 15%;
+    /* justify-content: space-between; */
+}
+.pie__redes__enlace{
+    width: 1.2rem;
+    height: 1.2rem;
+    padding: 5%;
+    border: var(--color-fuentes-bordes) 0.1rem solid;
+    border-radius: 100% 100%;
+    text-decoration: none;
+    color: var(--color-fuentes-bordes);
+    scale: 1.1;
+    transition: all 0.5s ease;
+}
+.pie__redes__description{
+    width: 50%;
+    font-size: 0.8rem;
+}
+.pie__redes__enlace:hover{
+    scale: 1.5;
+    border: none;
+    background-color: var(--color-fuentes-bordes);
+    color: var(--color-boton-fuente);
+}
+@media (max-width: 400px){
+    .navegacion__logo{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .navegacion__logo__titulo{
+        margin-bottom: 2%;
+    }
+    .navegacion{
+        flex-direction: column;
+    }
+    .navegacion__enlaces{
+        justify-content: space-between;
+        padding: 0% 5%;
+        width: 90%;
+    }
+    .botones__contenido{
+        flex-direction: column;
+    }
+    .pie__redes{
+        flex-direction: column;
+        width: 100%;
+    }
+    .pies__redes_caja_enlaces{
+        width: 30%; 
+        justify-content: center;
+        /* justify-content: space-between; */
+        gap: 15%;
+        margin-bottom: 5%;
+    }
+    .cuestionario{
+        width: 80%;
+    }
+    .cuestionario__pregunta{
+        width: 100%;
+    }
+    .cuestionario__cuadro{
+        width: 80%;
+    }
+    #cuestionario__nombre, #cuestionario__edad, #cuestionario__lenguaje{
+        width: 100%;
+        padding-left: 0 2%;
+    }
+}
 .hidden{
     display: none;
 }
