--- a/day4/day4.css
+++ b/day4/day4.css
@@ -29,9 +29,6 @@ html{
     padding: 0;
 }
 body{
-    /* display: flex;
-    height: 100vh;
-    /* background-color: var(--color-fondo); */
     height: 100vh;
     color: var(--color-fuentes-bordes);
     font-family: var(--fuentes-cuerpo);
@@ -40,9 +37,6 @@ body{
     font-size: 1.0rem;
     line-height: 1.2;
     box-sizing: border-box;
-    /* background-image: url(./img/dia1.jpg);
-    background-position: 0;
-    background-size:auto; */
     animation-name: change-color;
     animation-duration: 15s;
     animation-timing-function: linear;
@@ -70,11 +64,6 @@ main{
     align-items: center;
     margin: 0 5%;
     width: 90%;
-    /* background-color: aliceblue; */
-    /* animation-name: fadeIn;
-    animation-duration: 0.6s;
-    animation-timing-function: ease-out;
-    animation: FadeIn 0.6s ease-out 2s; */
 }
 .navegacion__enlaces, main, footer{
     opacity: 0;
@@ -172,57 +161,23 @@ header{
 .aplicacion ul li{
     list-style: none;
 }
-/* .botones__contenido{
+.modos{
     width: 100%;
     display: flex;
-    justify-content: center;
-    gap: 5%;
-}
-.strings, .numbers{
-    list-style: none;
-}
-.numbers__lista, .strings__lista{
-    margin-bottom: 3%; */
-/* } */
-.cuestionario{
-    display: flex;
     flex-direction: column;
-    border: var(--color-fuentes-bordes) solid 1px;
-    padding: 2%;
-    width: 50%;
-    border-radius: 2rem;
     align-items: center;
-    box-shadow: 0.5rem 0.5rem 0.8rem var(--color-fuentes-bordes);
-    gap: 0.5rem;
 }
-.cuestionario__cuadro{
+#botones_Ciclo_While{
     width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
 }
-.cuestionario__pregunta{
-
+.juego__dialogo__forma{
     width: 80%;
-    padding: 0 3%;
-    text-align: left;
-    font-size: 0.8rem;
-}
-#cuestionario__nombre, #cuestionario__edad, #cuestionario__lenguaje{
-    width: 95%;
-    padding-left: 1.0rem;
-    border-radius: 0.5rem;
-    border: none;
-    transition: all 0.8s ease;
-}
-#cuestionario__nombre:focus, #cuestionario__edad:focus, #cuestionario__lenguaje:focus{
-    outline: none;
-    border: var(--color-fuentes-bordes) 0.05rem solid;
-    box-shadow: 0.1rem 0.1rem 0.3rem var(--color-boton-deshabilitado);
-}
-#formularioOpcional{
-    flex-direction: column;
-    align-items: center; 
+    display: flex;
+    justify-content: space-between;
+    gap: 0.2rem;
 }
 .escondido{
     display: none;
@@ -235,13 +190,14 @@ button{
     /* width: 5rem; */
     background-color: var(--color-boton);
     border: none;
-    border-radius: 0.5rem;
+    /* border-radius: 0.5rem; */
     box-shadow: none;
     color: var(--color-boton-fuente);
     transition: all 0.8s ease;
 }
 button:disabled{
     background-color: var(--color-boton-deshabilitado);
+    animation: none;
 }
 button:not(:disabled):hover{
     /* scale: 1.3; */
@@ -250,13 +206,34 @@ button:not(:disabled):hover{
     color: var(--color-boton);
     font-weight: 600;
 }
+.juego_boton{
+    width: 2.0rem;
+    border-radius: none;
+    animation: animateButton 1.2s ease infinite;
+    transition: all 0.5s ease;
+}
+@keyframes animateButton {
+    25%, 75%{
+        transform: translateY(-0.2rem);
+    }
+    50%{
+        transform: translateY(-0.5rem);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
+.juego_boton:hover{
+    animation: none;
+    border-radius: 0.5rem;
+}
 .resultados__botones p{
     font-weight: 600;
     font-size: 1.2rem;
 }
 .animacion__texto{
     animation: variables 0.9s ease-in-out;
-    /* añadir a clase optional__mensaje */
 }
 @keyframes variables {
     0%{
@@ -283,8 +260,6 @@ button:not(:disabled):hover{
 }
 
 #enlace_respositorio{
-    /* width: 800px; */
-    /* border: red solid 3px; */
     position: relative;
     line-height: 2rem  ;
     text-align: center;
@@ -315,7 +290,6 @@ button:not(:disabled):hover{
 }
 #enlace_respositorio:hover::before,#enlace_respositorio:hover::after{
     width: 100%;
-    /* transition: all 0.8s ease; */
 }
 #comparar__seccion_resultado{
     font-size: 1.5rem;
@@ -337,7 +311,6 @@ footer{
     width: 10%;
     display: flex;
     gap: 15%;
-    /* justify-content: space-between; */
 }
 .pie__redes__enlace{
     width: 1.2rem;
@@ -387,7 +360,6 @@ footer{
     .pies__redes_caja_enlaces{
         width: 30%; 
         justify-content: center;
-        /* justify-content: space-between; */
         gap: 15%;
         margin-bottom: 5%;
     }
